manifests/ingress/ingress-tomcat-tls.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: ingress-tomcat-tls
  namespace: default
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  tls:
    - hosts:
      - tomcat.oliver.com
      secretName: tomcat-ingress-secret
  rules:
    - host: tomcat.oliver.com
      http:
        paths:
          - path:
            backend:
              serviceName: tomcat
              servicePort: 8080
